vercre-vci/src/snapshots/vercre_vci__token__tests__simpl-token.snap
---
source: vercre-vci/src/token.rs
assertion_line: 251
expression: response
---
access_token: "[access_token]"
token_type: Bearer
expires_in: 900
c_nonce: "[c_nonce]"
c_nonce_expires_in: 600
